# multiarray

./: .codespellrc  .gitmodules  BUILDING.md  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md  README_8md.html  about.html  about_8dox.html  annotated.html  classma_1_1multiarray.html  classma_1_1multiarray__s.html  dir_49e56c817e5e54854c35e136979f97ca.html  dir_7ea7e0fca5c2c72750cb0723fc4adcae.html  dir_ef3b2545113449f8f25e623a543d64e3.html  files.html  index.html  modules.html  multiarray_8hpp.html  namespacema.html  namespaces.html  pages.html  searchdata-v1.js  structma_1_1Dims__s.html  structma_1_1Dims__s_3_010_00_01void_01_4.html  structma_1_1Dims__s_3_011_00_01void_01_4.html  structma_1_1Dims__s_3_01N_00_01std_1_1enable__if__t_3_07N_01_4_010_08_4_01_4.html  structma_1_1TupleToString.html  structma_1_1TupleToString_3_01Tuple_00_011_01_4.html
.github/workflows/: ci.yml
cmake/: install-config.cmake  install-rules.cmake  lint.cmake  variables.cmake
example/: CMakeLists.txt  empty_example.cpp
include/multiarray/: multiarray.hpp
test/: CMakeLists.txt
test/source/: multiarray_test.cpp
